Preserve status alias registration order